finish initial routes

--- a/templates/new_user.html
+++ b/templates/new_user.html
@@ -5,11 +5,11 @@
 
 <form action="">
   <label>
-    <input type="text" name="first_name"></label>
+    <input type="text" name="first_name" required></label>
   <label>
-    <input type="text" name="last_name"></label>
+    <input type="text" name="last_name" required></label>
   <label>
-    <input type="image" name="image"></label>
+    <input type="image" name="image" required></label>
   <button>Add</button>
 </form>
 
