--- a/templates/user_detail.html
+++ b/templates/user_detail.html
@@ -5,4 +5,6 @@
 <img src="user.image" alt="picture of {user.first_name} {user.last_name}">
 <button>Edit</button> <button>Delete</button>
 
+<!--this is the user_detail page (for testing)-->
+
 {% endblock %}
