--- a/templates/user_detail.html
+++ b/templates/user_detail.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block title %}{user.first_name} {user.last_name}{% endblock %}
 {% block content %}
-<h1>{user.first_name} {user.last_name}</h1>
-<img src="user.image" alt="picture of {user.first_name} {user.last_name}">
+<h1>{{user.first_name}} {{user.last_name}}</h1>
+<img src={{user.image_url}} alt="picture of {{user.first_name}} {{user.last_name}}">
 <button>Edit</button> <button>Delete</button>
 
 <!--this is the user_detail page (for testing)-->
