--- a/templates/users.html
+++ b/templates/users.html
@@ -4,10 +4,12 @@
 <h1>User List</h1>
 <ul>
   {%for user in users%}
-  <li>{{user.first_name}} {{user.last_name}}</li>
+  <li><a href="users/{{user.id}}">{{user.first_name}} {{user.last_name}}</a></li>
   {% endfor %}
 </ul>
-<button>Add User</button>
+<form action="/users/new">
+  <button>Add User</button>
+</form>
 
 <!--this is the users list page (for testing)-->
 
