working through tests

--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -9,7 +9,7 @@
   <label>
     <input type="text" name="last_name" placeholder="{user.last_name}"></label>
   <label>
-    <input type="image" name="image" placeholder="{user.image}"></label>
+    <input type="url" name="image_url" placeholder="{user.image_url}"></label>
   <button>Save</button> <button>Cancel</button>
 </form>
 
