--- a/templates/new_user.html
+++ b/templates/new_user.html
@@ -9,7 +9,7 @@
   <label>
     <input type="text" name="last_name" required></label>
   <label>
-    <input type="text" name="image"></label>
+    <input name="image_url"></label>
   <button>Add</button>
 </form>
 
