--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -3,14 +3,16 @@
 {% block content %}
 <h1>Edit User Info</h1>
 
-<form action="">
+<form action="/users/{{user.id}}/edit" method="POST">
   <label>
-    <input type="text" name="first_name" placeholder="{user.first_name}"></label>
+    <input type="text" name="first_name" value="{{user.first_name}}"></label>
   <label>
-    <input type="text" name="last_name" placeholder="{user.last_name}"></label>
+    <input type="text" name="last_name" value="{{user.last_name}}"></label>
   <label>
-    <input type="url" name="image_url" placeholder="{user.image_url}"></label>
-  <button>Save</button> <button>Cancel</button>
+    <input type="url" name="image_url" value="{{user.image_url}}"></label>
+  <button>Save</button></form>
+  <form action="/users">
+  <button>Cancel</button>
 </form>
 
 <!--this is the edit_users page (for testing)-->
