working through part two getting form

--- a/templates/user_detail.html
+++ b/templates/user_detail.html
@@ -9,6 +9,10 @@
 <form action="{{user.id}}/delete" method="POST">
   <button>Delete</button>
 </form>
+<p><!-- fill in--></p>
+<form action="/users/{{user.id}}/posts/new" method="GET">
+  <button>Add post</button>
+</form>
 
 <!--this is the user_detail page (for testing)-->
 
